// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Row should render NoResult properly 1`] = `
.c1 {
  text-align: center;
  padding: 0.8rem 1.6rem;
  width: 200px;
}

.c0 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0.c0:hover {
  z-index: 2;
}

.c0:nth-child(odd),
.c0:nth-child(odd) > * {
  background-color: #F7F8F9;
  color: #13181D;
}

.c0:nth-child(even),
.c0:nth-child(even) > * {
  background-color: #ffffff;
  color: #13181D;
}

<div>
  <tr
    class="sc-AxhUy c0"
  >
    <td
      class="c1"
      width="200"
    >
      Dummy
    </td>
  </tr>
</div>
`;

exports[`Row should render NoResult with Card design also 1`] = `
.c1 {
  text-align: center;
  padding: 0.8rem 1.6rem;
  width: 200px;
}

.c0 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
  border: none;
  border-radius: 0.8rem;
  margin-left: 0.8rem;
  margin-right: 0.8rem;
  box-shadow: 0 0.2rem 0.8rem rgba(96,120,144,0.2);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0,
.c0 > * {
  background-color: #ffffff;
  color: #13181D;
}

.c0.c0.c0 > *:first-child,
.c0.c0.c0 > *:first-child::before {
  -webkit-transition: border-radius 200ms ease-in;
  transition: border-radius 200ms ease-in;
  border-radius: 0.8rem 0 0 0.8rem;
}

.c0.c0.c0 > *:first-child::before {
  width: 0.8rem;
}

.c0.c0.c0 > *:last-child {
  border-radius: 0 0.8rem 0.8rem 0;
}

.c0.c0.c0 > *:nth-last-child(2)::before {
  width: 0.8rem;
  border-radius: 0 0 0 0.8rem;
}

.c0:hover {
  box-shadow: 0 0.2rem 0.8rem rgba(96,120,144,0.35);
}

.c0:not(:last-child) {
  margin-bottom: 0.8rem;
}

<div>
  <tr
    class="sc-AxhUy c0"
  >
    <td
      class="c1"
      width="200"
    >
      Dummy
    </td>
  </tr>
</div>
`;

exports[`Row should render row properly 1`] = `
.c0 {
  display: grid;
  position: relative;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: -webkit-fit-content;
  min-width: -moz-fit-content;
  min-width: fit-content;
  cursor: inherit;
}

.c0.c0:hover {
  z-index: 2;
}

.c0:nth-child(odd),
.c0:nth-child(odd) > * {
  background-color: #F7F8F9;
  color: #13181D;
}

.c0:nth-child(even),
.c0:nth-child(even) > * {
  background-color: #ffffff;
  color: #13181D;
}

<div>
  <tr
    class="c0"
  >
    Dummy
  </tr>
</div>
`;
